# 2hu-demo

./: .gitignore  2hu  CMakeLists.txt  Makefile  README.md  build.sh  compile.sh  meson.build  output
cl/: 2hu.asd  README.md  animation.lisp  common.lisp  emitter.lisp  enemy.lisp  entity.lisp  game.lisp  package.lisp  player.lisp  shot.lisp  twohu.asd
include/: common.h  entity.h  game.h  safe_array.h  transient.h
src/: .game.cpp.swp  bullet.c  bullet.h  common.c  constants.h  entity.c  game.c  game.cpp  game.h  graphics.cpp  graphics.h  input.c  input.h  main.c  main.cpp  safe_array.c  safe_array.h  sprite.cpp  sprite.h  transient.c  twohu.c  vector.c  vector.h
src-old/: entity.c  entity.h  game.c  game.h  transient.c  transient.h
src/bullet/: bullet.c  bullet.h  bullet_manager.h
src/enemy/: enemy_manager.c  enemy_manager.h
src/entity/: entity-factory.c  entity-factory.h  entity-type.h  entity.c  entity.h  entity_factory.c  entity_factory.h  spritesheet_manager.c  spritesheet_manager.h
src/input/: input.c  input.h
src/new/: bullet.h  constants.h  entity.c  entity.h  game.c  input.c  input.h  twohu.c
src/twohu/: twohu.c  twohu.h
src/util/: rect.c  rect.h  util.c  util.h
subprojects/: libjpeg.wrap  libpng.wrap  ogg.wrap  sdl2.wrap  sdl2_image.wrap  sdl2_mixer.wrap  sdl2_ttf.wrap  vorbis.wrap
test/: safe_array_test.c  sarray_test.c
